[project]
name = "langgraph-qwen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=1.4.8",
    "langgraph>=1.2.7",
    "openai>=2.44.0",
    "pillow>=12.3.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
]
